[package]
name = "pr070c01"
description = ""
version = "0.0.0"
homepage = "https://github.com/r3v2d0g/pr070c01"
repository = "https://github.com/r3v2d0g/pr070c01.git"
documentation = "https://docs.rs/pr070c01"
keywords = []
categories = []
readme = "README.md"
license = "MPL-2.0"
authors = ["Matthieu Le brazidec (r3v2d0g) <r3v2d0g@jesus.gg>"]
edition = "2018"
publish = false

[features]
default = ["thiserror"]

[patch.crates-io.snow]
git = "https://github.com/r3v2d0g/snow.git"
branch = "patch-1"

[dependencies]
async-peek = "0.2"
num_enum = "0.5"
snow = "0.7"
sp4r53 = "0.1"

[dependencies.ed25519]
package = "ed25519-dalek"
version = "1.0.0-pre.4"

[dependencies.futures-util]
version = "0.3"
default-features = false
features = ["io"]

[dependencies.thiserror]
version = "1.0"
optional = true

[dev-dependencies]
bincode = "1.3"
smol = "0.3"
ufut = "0.2"

[dev-dependencies.async-peek]
version = "0.2"
features = ["async-io"]

[dev-dependencies.p0w]
version = "0.2"
features = ["serde"]
