[package]
name = "pr070c01"
description = ""
version = "0.0.0"
homepage = "https://github.com/r3v2d0g/pr070c01"
repository = "https://github.com/r3v2d0g/pr070c01.git"
documentation = "https://docs.rs/pr070c01"
keywords = []
categories = []
readme = "README.md"
license = "MPL-2.0"
authors = ["Matthieu Le brazidec (r3v2d0g) <r3v2d0g@jesus.gg>"]
edition = "2018"
publish = false

[features]
default = ["thiserror"]

[patch.crates-io.snow]
git = "https://github.com/r3v2d0g/snow.git"
branch = "patch-1"

[dependencies]
async-peek = "0.2"
snow = "0.7"

[dependencies.futures-util]
version = "0.3"
default-features = false
features = ["io"]

[dependencies.thiserror]
version = "1.0"
optional = true

[dependencies.packets]
package = "p4ck375"
git = "https://github.com/an0nym0u51y/p4ck375.git"

[dev-dependencies]
smol = "0.3"
ufut = "0.2"

[dev-dependencies.async-peek]
version = "0.2"
features = ["async-io"]
