[package]
name = "pr070c01"
description = ""
version = "0.0.0"
homepage = "https://github.com/r3v2d0g/pr070c01"
repository = "https://git.r3vd5u3d.network/~r3v2d0g/pr070c01"
documentation = "https://docs.rs/pr070c01"
keywords = []
categories = []
readme = "README.md"
license = "MPL-2.0"
authors = ["Matthieu Le brazidec (r3v2d0g) <r3v2d0g@jesus.gg>"]
edition = "2018"
publish = false

[features]
default = ["thiserror"]

[patch.crates-io.snow]
git = "https://github.com/r3v2d0g/snow.git"
branch = "patch-1"

[dependencies]
async-peek = "0.3"
futures-io = "0.3"
snow = "0.7"

[dependencies.format]
package = "f0rm47"
git = "https://git.r3vd5u3d.network/~r3v2d0g/f0rm47"
branch = "main"

[dependencies.thiserror]
version = "1.0"
optional = true

[dependencies.packets]
package = "p4ck375"
git = "https://git.r3vd5u3d.network/~r3v2d0g/p4ck375"
branch = "main"

[dev-dependencies]
async-net = "1.2"
futures-lite = "1.3"
smol = "1.0"

[dev-dependencies.async-peek]
version = "0.3"
features = ["async-net"]
